--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
