--- a/chrome extension/manifest.json
+++ b/chrome extension/manifest.json
@@ -1,16 +1,19 @@
 {
-  "manifest_version": 2,
-  "name": "TimeTracker",
-  "description": "Track your web and app browsing habbits!",
-  "version": "1.0",
-  "author": "Tarun Khare",
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_title": "Just observing your current url."
-  },
-  "permissions": ["tabs", "activeTab", "http://127.0.0.1/", "storage"],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  }
+   "manifest_version": 2,
+   "name": "TimeTracker",
+   "description": "Track your web and app browsing habbits!",
+   "version": "1.0",
+   "author": "Tarun Khare",
+   "icons": { "48": "icon.png" },
+   "browser_action": {
+      "default_icon": "icon.png",
+      "default_title": "Just observing your current url.",
+      "default_popup": "popup.html"
+   },
+
+   "permissions": ["tabs", "activeTab", "http://127.0.0.1/", "storage"],
+   "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+   }
 }
