--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.3",
     "chartjs": "^0.3.24",
+    "config": "^3.2.5",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
