--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/system": "^4.9.3",
     "axios": "^0.19.0",
     "chart.js": "^2.9.3",
     "chartjs": "^0.3.24",
