--- a/client/package.json
+++ b/client/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.8.2",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/system": "^4.9.3",
-    "axios": "^0.19.0",
-    "chart.js": "^2.9.3",
-    "chartjs": "^0.3.24",
-    "config": "^3.2.5",
-    "jwt-decode": "^2.2.0",
-    "material-ui": "^0.20.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-chartjs-2": "^2.8.0",
-    "react-datepicker": "^2.14.1",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "semantic-ui-react": "^0.88.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "client",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@material-ui/core": "^4.8.2",
+      "@material-ui/icons": "^4.5.1",
+      "@material-ui/system": "^4.9.3",
+      "axios": "^0.19.0",
+      "chart.js": "^2.9.3",
+      "chartjs": "^0.3.24",
+      "config": "^3.2.5",
+      "jwt-decode": "^2.2.0",
+      "material-ui": "^0.20.2",
+      "react": "^16.12.0",
+      "react-bootstrap": "^1.0.0-beta.16",
+      "react-chartjs-2": "^2.8.0",
+      "react-datepicker": "^2.14.1",
+      "react-dom": "^16.12.0",
+      "react-router-dom": "^5.1.2",
+      "react-scripts": "3.2.0",
+      "semantic-ui-react": "^0.88.2"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+   },
+   "eslintConfig": {
+      "extends": "react-app"
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "proxy": "http://localhost:5000"
 }
