--- a/chrome extension/manifest.json
+++ b/chrome extension/manifest.json
@@ -6,7 +6,7 @@
    "author": "Tarun Khare",
    "icons": { "48": "icon.png" },
    "browser_action": {
-      "default_icon": "icon.png",
+      "default_icon": "icon.PNG",
       "default_title": "Just observing your current url.",
       "default_popup": "popup.html"
    },
