--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "semantic-ui-react": "^0.88.2"
