--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.8.2",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/system": "^4.9.3",
-    "axios": "^0.19.0",
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/system": "^4.9.10",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs": "^0.3.24",
-    "config": "^3.2.5",
+    "config": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-chartjs-2": "^2.8.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.14.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
