--- a/package.json
+++ b/package.json
@@ -12,22 +12,20 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "@material-ui/lab": "^4.0.0-alpha.39",
+      "@material-ui/lab": "^4.0.0-alpha.51",
       "bcryptjs": "^2.4.3",
       "client": "0.0.1",
-      "concurrently": "^5.0.0",
-      "config": "^3.2.3",
+      "config": "^3.3.1",
       "cors": "^2.8.5",
-      "create-react-app": "^3.2.0",
+      "create-react-app": "^3.4.1",
       "express": "^4.17.1",
-      "express-validator": "^6.2.0",
+      "express-validator": "^6.4.0",
       "jsonwebtoken": "^8.5.1",
-      "mongoose": "^5.7.4",
-      "nodemon": "^1.19.3"
+      "mongoose": "^5.9.10"
    },
    "devDependencies": {
-      "concurrently": "^4.1.1",
-      "nodemon": "^1.19.1"
+      "concurrently": "^5.2.0",
+      "nodemon": "^1.19.4"
    },
    "proxy": "https://localhost:5000"
 }
