added howto and download

--- a/clockman extension/manifest.json
+++ b/clockman extension/manifest.json
@@ -14,11 +14,11 @@
    "permissions": [
       "tabs",
       "activeTab",
-      "https://cryptic-stream-13108.herokuapp.com/",
+      "https://clockman.herokuapp.com/",
       "storage"
    ],
    "background": {
-      "scripts": ["background2.js"],
+      "scripts": ["background.js"],
       "persistent": false
    }
 }
