--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
       "react-dom": "^16.12.0",
       "react-router-dom": "^5.1.2",
       "react-scripts": "3.2.0",
+      "react-scroll": "^1.8.2",
       "semantic-ui-react": "^0.88.2"
    },
    "scripts": {
