--- a/clockman extension/manifest.json
+++ b/clockman extension/manifest.json
@@ -11,12 +11,7 @@
       "default_popup": "popup.html"
    },
 
-   "permissions": [
-      "tabs",
-      "activeTab",
-      "https://clockman.herokuapp.com/",
-      "storage"
-   ],
+   "permissions": ["tabs", "activeTab", "https://localhost:5000/", "storage"],
    "background": {
       "scripts": ["background.js"],
       "persistent": false
