--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@fortawesome/free-solid-svg-icons": "^6.4.0",
+      "@fortawesome/react-fontawesome": "^0.2.0",
       "@material-ui/core": "^4.8.2",
       "@material-ui/icons": "^4.5.1",
       "@material-ui/system": "^4.9.3",
