--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
       "react-router-dom": "^5.1.2",
       "react-scripts": "3.2.0",
       "react-scroll": "^1.8.2",
+      "react-toastify": "^8.1.0",
       "semantic-ui-react": "^0.88.2"
    },
    "scripts": {
