--- a/clockman extension/manifest.json
+++ b/clockman extension/manifest.json
@@ -1,19 +1,18 @@
 {
-   "manifest_version": 2,
+   "manifest_version": 3,
    "name": "TimeTracker",
-   "description": "Track your web and app browsing habbits!",
+   "description": "Track your web and app browsing habits!",
    "version": "1.0",
    "author": "Tarun Khare",
    "icons": { "48": "icon.png" },
-   "browser_action": {
+   "action": {
       "default_icon": "icon.PNG",
       "default_title": "Just observing your current url.",
       "default_popup": "popup.html"
    },
-
-   "permissions": ["tabs", "activeTab", "https://localhost:5000/", "storage"],
+   "permissions": ["tabs", "activeTab", "storage"],
+   "host_permissions": ["https://localhost:5000/"],
    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
+      "service_worker": "background.js"
    }
 }
