--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,11 @@
       "react-datepicker": "^2.14.1",
       "react-dom": "^16.12.0",
       "react-router-dom": "^5.1.2",
-      "react-scripts": "3.2.0",
+      "react-scripts": "^5.0.1",
       "react-scroll": "^1.8.2",
       "react-toastify": "^8.1.0",
-      "semantic-ui-react": "^0.88.2"
+      "semantic-ui-react": "^0.88.2",
+      "webpack": "^5.103.0"
    },
    "scripts": {
       "start": "react-scripts start",
