--- a/client/package.json
+++ b/client/package.json
@@ -48,5 +48,9 @@
          "last 1 safari version"
       ]
    },
-   "proxy": "http://localhost:5000"
+   "proxy": "http://localhost:5000",
+   "engines": {
+     "node": "18.x",
+     "npm": "9.x"
+   }
 }
